--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+<audio controls autoplay loop style="display:none" >
+  <source src="music.mp3" type="audio/mpeg" id = 'music'>
+  Your browser does not support the audio tag.
+</audio>
   <head>
     <title>jeKQuizz</title>
     <link href="css/index.css" rel="stylesheet" type="text/css">
@@ -13,20 +17,25 @@
     <div id="gameScreen">
       <h1 id="countdown"></h1>
       <h1 id="npergunta"></h1>
-      <h2 id="categoria"></h2>
       <h2 id="pergunta"></h2>
 
       <button id="button1">A:</button>
       <button id="button2">B:</button>
       <button id="button3">C:</button>
       <button id="button4">D:</button>
+      
+      <img src="images/respondeu1.png" />
+      <img src="images/respondeu2.png" />
+      <img src="images/respondeu3.png" />
+      <img src="images/respondeu4.png" />
+
     </div>
     <div id="pickCharacterScreen">
-      <button>Character A</button>
-      <button>Character B</button>
-      <button>Character C</button>
-      <button>Character D</button>
-      <button id="startGame">Começar</button>
+      <button onkeypress="pick"><img src="images/respondeu1.png" /></button>
+      <button onkeypress="pick"><img src="images/respondeu2.png" /></button>
+      <button onkeypress="pick"><img src="images/respondeu3.png" /></button>
+      <button onkeypress="pick"><img src="images/respondeu4.png" /></button>
+
     </div>
     <div id="scoreScreen">
       <h1></h1>
@@ -35,14 +44,101 @@
       <h1></h1>
       <button id ='continue'>Continuar</button>
     </div>
+    <div id = 'prepareScreen'>
+      <h1>Raise your glasses guys! This is about to start!</h1>
+      <h1 id = 'countdown2'></h1>
+    </div>
     <div id="endScreen">
-      <h1></h1>
-      <h1></h1>
-      <h1></h1>
-      <h1></h1>
-      <button  id ='continue'>Continuar</button>
+      <h1 id = 'countdown3'></h1>
+      <h1>And the winner is...</h1>
+    </div>
+    <div id = 'winnerScreen'>
+      <h1 id = 'winner'></h1>
+      <button id = 'playAgain'>Play Again</button>
+    </div>
     </div>
     <script src="js/game.js"></script>
     <script src="js/Question.js"></script>
   </body>
+  <section id="classification_board">
+      <div class="container_board">
+          <h1> Classification Board</h1>
+      </div>
+      <div class="container_table">
+      <table> <!-- number of the question -->
+          <tr>
+              <th> </th>
+              <th> Question 1</th>
+              <th> Question 2</th>
+              <th> Question 3</th>
+              <th> Question 4</th>
+              <th> Question 5</th>
+              <th> Question 6</th>
+              <th> Question 7</th>
+              <th> Question 8</th>
+              <th> Question 9</th>
+              <th> Question 10</th>
+          </tr>
+          <!-- team 1 got it right or wrong -->
+          <tr>
+              <th>Team 1</th>
+              <th id = 't1p1'></th>
+              <th id = 't1p2'></th>
+              <th id = 't1p3'></th>
+              <th id = 't1p4'></th>
+              <th id = 't1p5'></th>
+              <th id = 't1p6'></th>
+              <th id = 't1p7'></th>
+              <th id = 't1p8'></th>
+              <th id = 't1p9'></th>
+              <th id = 't1p10'></th>
+          </tr>
+          <!-- team 2 got it right or wrong -->
+          <tr>
+              <th>Team 2</th>
+              <th id = 't2p1'></th>
+              <th id = 't2p2'></th>
+              <th id = 't2p3'></th>
+              <th id = 't2p4'></th>
+              <th id = 't2p5'></th>
+              <th id = 't2p6'></th>
+              <th id = 't2p7'></th>
+              <th id = 't2p8'></th>
+              <th id = 't2p9'></th>
+              <th id = 't2p10'></th>
+          </tr>
+          <!-- team 3 got it right or wrong -->
+          <tr>
+              <th> Team 3</th>
+              <th id = 't3p1'></th>
+              <th id = 't3p2'></th>
+              <th id = 't3p3'></th>
+              <th id = 't3p4'></th>
+              <th id = 't3p5'></th>
+              <th id = 't3p6'></th>
+              <th id = 't3p7'></th>
+              <th id = 't3p8'></th>
+              <th id = 't3p9'></th>
+              <th id = 't3p10'></th>
+          </tr>
+          <!-- team 4 got it right or wrong -->
+          <tr>
+              <th> Team 4</th>
+              <th id = 't4p1'></th>
+              <th id = 't4p2'></th>
+              <th id = 't4p3'></th>
+              <th id = 't4p4'></th>
+              <th id = 't4p5'></th>
+              <th id = 't4p6'></th>
+              <th id = 't4p7'></th>
+              <th id = 't4p8'></th>
+              <th id = 't4p9'></th>
+              <th id = 't4p10'></th>
+          </tr>
+      </table>
+      </div>
+  </section>
+  <Character id = 'character'>
+  </Character>
+
 <html>
