Bind controllers with rest of the game

--- a/index.html
+++ b/index.html
@@ -24,17 +24,12 @@
       <button id="button3">C:</button>
       <button id="button4">D:</button>
 
-      <img src="images/respondeu1.png" />
-      <img src="images/respondeu2.png" />
-      <img src="images/respondeu3.png" />
-      <img src="images/respondeu4.png" />
-
     </div>
     <div id="pickCharacterScreen">
-      <button onkeypress="pick"><img src="images/respondeu1.png" /></button>
-      <button onkeypress="pick"><img src="images/respondeu2.png" /></button>
-      <button onkeypress="pick"><img src="images/respondeu3.png" /></button>
-      <button onkeypress="pick"><img src="images/respondeu4.png" /></button>
+      <button><img src="images/respondeu1.png" /></button>
+      <button><img src="images/respondeu2.png" /></button>
+      <button><img src="images/respondeu3.png" /></button>
+      <button><img src="images/respondeu4.png" /></button>
 
     </div>
     <div id="scoreScreen">
@@ -53,7 +48,7 @@
       <h1>And the winner is...</h1>
     </div>
     <div id = 'winnerScreen'>
-      <h1 id = 'winner'></h1>
+      <img id= 'winner'></img>
       <button id = 'playAgain'>Play Again</button>
     </div>
     </div>
