--- a/index.html
+++ b/index.html
@@ -1,48 +1,118 @@
 <html>
+<audio controls autoplay loop style="display:none" >
+  <source src="music.mp3" type="audio/mpeg" id = 'music'>
+  Your browser does not support the audio tag.
+</audio>
   <head>
     <title>jeKQuizz</title>
     <link href="css/index.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Permanent+Marker" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
   </head>
 
   <body>
-    <div id="startScreen">
-      <img id="logo" src="images/logo.png">
-      <h1>Olá! Bem-vindo ao nosso jeKQuizz! Vamos jogar?</h1>
-      <button>Bora lá!</button>
+    <section id = "startScreen">
+    <div class="container1">
+      <h1> jeKquiz</h1>
     </div>
-    <div id="gameScreen">
-      <h1 id="countdown"></h1>
-      <h1 id="npergunta"></h1>
-      <h2 id="categoria"></h2>
-      <h2 id="pergunta"></h2>
+    <div class="container2">
+      <button> Press buzz to start! </button>
+    </div>
+    <div class="simbolo_img">
+      <img src="Images/simbolo.png" alt="logo">
+    </div>
+  </section>
 
-      <button id="button1">A:</button>
-      <button id="button2">B:</button>
-      <button id="button3">C:</button>
-      <button id="button4">D:</button>
-    </div>
-    <div id="pickCharacterScreen">
-      <button>Character A</button>
-      <button>Character B</button>
-      <button>Character C</button>
-      <button>Character D</button>
-      <button id="startGame">Começar</button>
-    </div>
-    <div id="scoreScreen">
-      <h1></h1>
-      <h1></h1>
-      <h1></h1>
-      <h1></h1>
+    <section id="gameScreen">
+      <div class="clock">
+        <h1 id="countdown"></h1>
+      </div>
+      <h1 id="npergunta"></h1>
+      <<div class="containerquestion">
+        <h2 id="pergunta"></h2>
+      </div>
+      <div class="answer">
+        <button id="button1">A:</button>
+        <button id="button2">B:</button>
+        <button id="button3">C:</button>
+        <button id="button4">D:</button>
+      </div>
+
+    </section>
+    <section id="pickCharacterScreen">
+      <div class="container1team">
+        <h1> Choose a Drink and lets see who loses first: </h1>
+      </div>
+      <div class="teams">
+      <button><img src="Images/firstteam.png" alt="1team" height="160" width="160"></button>
+      <button><img src="Images/secondteam.png" alt="2team" height="160" width="160"></button>
+      <button><img src="Images/thirdteam.png" alt="3team" height="160" width="160"></button>
+      <button><img src="Images/fourthteam.png" alt="4team" height="160" width="160"></button>
+      </div>
+      <div class="teamscolor">
+        <img src="Images/blue.png" alt="1color" height="40" width="140">
+        <img src="Images/orange.png" alt="2color" height="40" width="140">
+        <img src="Images/green.png" alt="3color" height="40" width="140">
+        <img src="Images/yellow.png" alt="4color" height="40" width="140">
+      </div>
+      <div class="teamsnumber">
+        <p> Team 1 </p>
+        <p> Team 2 </p>
+        <p> Team 3 </p>
+        <p> Team 4 </p>
+      </div>
+      <div class="container2team">
+        <h3> Select with the buzz buttons the icon you want for your team </h3>
+      </div>
+
+    </section>
+    <section id="scoreScreen">
+      <div class="container_results">
+        <h2> Results </h2>
+      </div>
+      <div class="participants_place">
+        <img src="Images/firstteam.png" alt="1team" height="140" width="140">
+        <img src="Images/secondteam.png" alt="2team" height="140" width="140">
+        <img src="Images/thirdteam.png" alt="3team" height="140" width="140">
+        <img src="Images/fourthteam.png" alt="4team" height="140" width="140">
+      </div>
+      <div class="points">
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+      </div>
       <button id ='continue'>Continuar</button>
-    </div>
-    <div id="endScreen">
-      <h1></h1>
-      <h1></h1>
-      <h1></h1>
-      <h1></h1>
-      <button  id ='continue'>Continuar</button>
-    </div>
+    </section>
+    <section id = 'prepareScreen'>
+      <h1>Raise your glasses guys! This is about to start!</h1>
+      <h1 id = 'countdown2'></h1>
+      <div class="containerlets_strat">
+        <h1>Raise your glasses guys! <br>
+            This is about to start!</h1>
+      </div>
+      <div class="teamsselected">
+        <img src="Images/select1.png" alt="1" height="170" width="170">
+        <img src="Images/select2.png" alt="2" height="170" width="170">
+        <img src="Images/select3.png" alt="3" height="170" width="170">
+        <img src="Images/select4.png" alt="4" height="170" width="170">
+      </div>
+    </section>
+
+    <section id="endScreen">
+      <h1 id = 'countdown3'></h1>
+      <div class="container_suspense">
+          <h2> And the winner is....</h2>
+      </div>
+    </section>
+    <section id = 'winnerScreen'>
+      <div class="guy_drinking">
+        <img id= 'winner'></img>
+      </div>
+    </section>
     <script src="js/game.js"></script>
-    <script src="js/Question.js"></script>
   </body>
+  <Character id = 'character'>
+  </Character>
+
 <html>
